src/test/resources/testcases/invalid/types/void_operand_unary.tc
void foo() {
    return;
}
int main() {
    int x = !foo(); // Error: unary operator operand cannot be void
    return 0;
}
